--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ VITE_VUE_APP_TITLE = Global Village
 # 路由模式
 VITE_VUE_ROUTER_MODE = history
 # 路由Baseurl
-VITE_VUE_ROUTER_BASE = /
+VITE_VUE_ROUTER_BASE = /GlobalVillage/
 # axios Baseurl
 VITE_VUE_APP_API = /
 # 是否采用 mock 接口
